# fire_alcohol_analysis

./: .gitignore  README.md  pyproject.toml  results.ipynb  save_profile.py
.venv-clean/: pyvenv.cfg
data/: .~lock.3.csv#  .~lock.LUDN_2425_CTAB_20250611231708.csv#  .~lock.Wykaz_powierzchni_wg_stanu_na_01012025_ha_km2.xlsx#  .~lock.raport_zezwoleń_alkoholowych_czynych_na_dzień_4_lutego_2025_r..csv#  3.csv  LUDN_2425_CTAB_20250611231708.csv  Wykaz_powierzchni_wg_stanu_na_01012025_ha_km2.xlsx  raport_zezwoleń_alkoholowych_czynych_na_dzień_4_lutego_2025_r..csv
data_analysis/: analysis.py  main.py
fire_alcohol_data_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_analysis.py
