[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-alcohol-data-analysis"
version = "0.0.1"
description = "Package for data analysis"
authors = [
    { name = "Maria Waligórska", email = "m.waligorska@student.uw.edu.pl"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas >= 2.3.0",
    "numpy >= 2.2.0",
    "openpyxl >= 3.1.0",
    "scipy >= 1.11.3",
    "matplotlib >= 2.0.1",
    "jupyterlab >= 4.0.0"
]

[project.license]
text = "BSD 3-Clause"

[project.scripts]
main = "data_analysis.main:main"

[tool.setuptools.packages.find]
where = ["."]

